--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,15 @@
     </header>
     <nav>
         <ul id="nav-bar">
-            <li>Ver Todos Aparelhos</li>
+            <li><a href="{% url 'list_devices' %}">Ver Todos Aparelhos</a></li>
             <li>Inserir Aparelho</li>
             <li>Editar Aparelho</li>
         </ul>
     </nav>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 </body>
 </html>
