Criacao da logica para a CreateDevicesView(cria registros de aparelhos)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
     <nav>
         <ul id="nav-bar">
             <li><a href="{% url 'list_devices' %}">Ver Todos Aparelhos</a></li>
-            <li>Inserir Aparelho</li>
+            <li><a href="{% url 'create_devices' %}">Inserir Aparelho</a></li>
             <li>Editar Aparelho</li>
         </ul>
     </nav>
