Criacao da DeleteView para deletar devices

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Assistência Técnica de Celulares</h1>
+        <h1 class="h1-base">Assistência Técnica de Celulares</h1>
     </header>
     <nav>
         <ul id="nav-bar">
