Modificacao do campo technician para foreign key e ajustes de template

--- a/devices/templates/list_devices.html
+++ b/devices/templates/list_devices.html
@@ -9,6 +9,10 @@
 
 {% block content %}
     <h2>Listagem de Dispositivos</h2>
+
+    <form method="get">
+        <input name="search" placeholder="Procure pelo nome do cliente...">
+    </form>
     <table>
         <thead>
             <tr>
