--- a/devices/templates/update_device.html
+++ b/devices/templates/update_device.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <main>
-        {{ form.as_p }}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Atualizar</button>
+        </form>
     </main>
 {% endblock %}
