Criacao da view de atualizacao e criacao de technicals

--- a/technicals/templates/create_technicals.html
+++ b/technicals/templates/create_technicals.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <main>
-        <h1>Registrar um Aparelho</h1>
+        <h1>Registrar um Técnico</h1>
         <form method="post" action="">
         {% csrf_token %}
             {{ form.as_p }}
