--- a/technicals/templates/delete_technical.html
+++ b/technicals/templates/delete_technical.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/delete_device.css' %}">
+{% endblock %}
+
+{% block content %}
+    <h1 class="h1-delete">Você tem certeza que deseja excluir o registro do técnico {{ object.name }} de ID
+        {{ object.pk }}?<br>Essa ação é definitiva.</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="delete-btn">Deletar</button>
+        <a href="{% url 'list_devices' %}" class="cancel-btn">Cancelar</a>
+    </form>
+{% endblock %}
