--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,12 +18,17 @@
         <ul id="nav-bar">
             <li><a href="{% url 'list_devices' %}">Ver Todos Aparelhos</a></li>
             <li><a href="{% url 'create_devices' %}">Inserir Aparelho</a></li>
-            <li>Editar Aparelho</li>
+            {% if user.is_staff %}
+                <li><a href="{% url 'list_technicals' %}">Ver Todos Funcionários</a></li>
+                <li><a href="{% url 'create_technicals' %}">Inserir Funcionário</a></li>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <li><form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="logout-btn">Logout</button>
+            </form></li>
+            {% endif %}
         </ul>
-        <form method="post" action="{% url 'logout' %}">
-            {% csrf_token %}
-            <button type="submit">Logout</button>
-        </form>
 
     </nav>
 
