Criacao do campo employee_position (cargo) para os tecnicos/funcionarios e adaptações relativas ao mesmo

--- a/technicals/templates/list_technicals.html
+++ b/technicals/templates/list_technicals.html
@@ -18,6 +18,7 @@
             <tr>
                 <th>ID</th>
                 <th>Nome do Técnico</th>
+                <th>Cargo</th>
                 <th>CPF</th>
                 <th>Email</th>
                 <th>Data de Admissão</th>
@@ -31,6 +32,7 @@
                 <tr>
                     <td>{{ technical.id }}</td>
                     <td>{{ technical.name }}</td>
+                    <td>{{ technical.employee_position }}</td>
                     <td>{{ technical.cpf }}</td>
                     <td>{{ technical.email }}</td>
                     <td>{{ technical.admission_date }}</td>
