--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,18 +16,21 @@
     </header>
     <nav>
         <ul id="nav-bar">
-            <li><a href="{% url 'list_devices' %}">Ver Todos Aparelhos</a></li>
-            <li><a href="{% url 'create_devices' %}">Inserir Aparelho</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'list_devices' %}">Ver Todos Aparelhos</a></li>
+                <li><a href="{% url 'create_devices' %}">Inserir Aparelho</a></li>
+            {% endif %}
+
             {% if user.is_staff %}
                 <li><a href="{% url 'list_technicals' %}">Ver Todos Funcionários</a></li>
                 <li><a href="{% url 'create_technicals' %}">Inserir Funcionário</a></li>
                 <li><a href="{% url 'technicals_statistics' %}">Estatistícas</a></li>
             {% endif %}
             {% if user.is_authenticated %}
-            <li><form method="post" action="{% url 'logout' %}">
-                {% csrf_token %}
-                <button type="submit" class="logout-btn">Logout</button>
-            </form></li>
+                <li><form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button type="submit" class="logout-btn">Logout</button>
+                </form></li>
             {% endif %}
         </ul>
 
