Alterações na View TechnicalStatisticsView

--- a/business_statistics/templates/technicals_statistics.html
+++ b/business_statistics/templates/technicals_statistics.html
@@ -5,8 +5,8 @@
     <main>
         <h1>Estatisticas dos Funcionários</h1>
         <p>O número total de funcionários ativos é : {{ number_of_employees }}</p>
-        <p>A folha de pagamento somada é : R$ {{ total_wages }}</p>
-        <p>O número de aparelhos no momento na loja é : {{ active_devices }}</p>
+        <p>A folha de pagamento somada é : R$ {{ total_wages }}/mês</p>
+        <p>Faturamento Total: R${{ total_billing }}</p>
     </main>
 
 {% endblock %}
