--- a/devices/templates/list_devices.html
+++ b/devices/templates/list_devices.html
@@ -11,8 +11,8 @@
     <h2>Listagem de Dispositivos</h2>
     <p>Usuário : {{ request.user }}</p>
 
-    <form method="get">
-        <input name="search" placeholder="Procure pelo nome do cliente...">
+    <form class="search_form" method="get">
+        <input name="search" placeholder="Procure pelo nome do cliente ou modelo do aparelho...">
     </form>
     <table>
         <thead>
