--- a/technicals/templates/list_technicals.html
+++ b/technicals/templates/list_technicals.html
@@ -10,7 +10,7 @@
 {% block content %}
     <h2>Listagem de Técnicos</h2>
 
-    <form method="get">
+    <form class="search_form" method="get">
         <input name="search" placeholder="Procure pelo nome do técnico...">
     </form>
     <table>
