--- a/business_statistics/templates/technicals_statistics.html
+++ b/business_statistics/templates/technicals_statistics.html
@@ -11,7 +11,7 @@
 
     <main class="main_content">
         <h1 class="statistics_title">Estatistícas Gerais</h1>
-        <h2>Estatisticas dos Funcionários</h2>
+        <h2 class="statistics_subtitle">Estatisticas dos Funcionários</h2>
 
         <div class="employees_statistics_div">
             <div class="number_of_employees_div">
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <h2>Estatisticas da Empresa</h2>
+        <h2 class="statistics_subtitle">Estatisticas da Empresa</h2>
         <div class="employees_statistics_div">
             <div class="number_of_company_div">
                 Faturamento Total:<br><span class="number_white">R$ {{ total_billing|floatformat:2 }}</span>
