--- a/devices/templates/list_devices.html
+++ b/devices/templates/list_devices.html
@@ -8,8 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Listagem de Dispositivos</h2>
-    <p>Usuário : {{ request.user }}</p>
+    <h2 class="h2-title">Listagem de Dispositivos</h2>
 
     <form class="search_form" method="get">
         <input name="search" placeholder="Procure pelo nome do cliente ou modelo do aparelho...">
