--- a/static/css/list_devices.css
+++ b/static/css/list_devices.css
@@ -32,3 +32,11 @@ th {
     margin-left: 450px;
     margin-bottom: 30px;
 }
+
+.list_table {
+    margin-left: 140px;
+}
+
+.h2-title {
+    text-align: center;
+}
