--- a/technicals/templates/create_technicals.html
+++ b/technicals/templates/create_technicals.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <main>
-        <h1 class="form_ct_title">Registrar um Técnico</h1>
+        <h1 class="form_ct_title">Registrar um Funcionário</h1>
         <form class="form_create_technicals" method="post" action="">
         {% csrf_token %}
             {{ form.as_p }}
