--- a/technicals/templates/list_technicals.html
+++ b/technicals/templates/list_technicals.html
@@ -8,12 +8,12 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Listagem de Técnicos</h2>
+    <h2 class="h2-title">Listagem de Técnicos</h2>
 
     <form class="search_form" method="get">
         <input name="search" placeholder="Procure pelo nome do técnico...">
     </form>
-    <table>
+    <table class="list_table">
         <thead>
             <tr>
                 <th>ID</th>
